--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.1",
+    "nestjs-pptr": "^2.0.1",
     "openai": "^4.68.0",
     "pg": "^8.13.0",
+    "puppeteer": "^23.6.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
@@ -49,6 +51,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/puppeteer": "^7.0.4",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
