--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "puppeteer": "^23.6.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
